--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 				<groupId>com.heroku.sdk</groupId>
 				<artifactId>heroku-maven-plugin</artifactId>
 				<version>3.0.2</version>
+				<configuration>
+					<appName>evening-plateau-59541</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -cp target/classes:target/dependency/* com.zipcode.moneymakers.demo.AppApplication</web>
+					</processTypes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
