--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/accounts?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=sanosuke
+spring.datasource.password=Elbruno1722
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
